--- a/css/style.css
+++ b/css/style.css
@@ -690,17 +690,17 @@ canvas
 {
 	display: block;
 	width: auto;
-	height: 20px; 
+	height: 11px; 
 	margin:auto;
 	text-decoration:none; 
 	text-align:center; 
-	padding:11px 11px; 
+	padding:6px 11px; 
 	border:solid 1px #b3b3b3; 
 	-webkit-border-radius:4px;
 	-moz-border-radius:4px; 
 	border-radius: 4px; 
-	font:18px Arial, Helvetica, sans-serif; 
-	font-weight:bold; 
+	font:12px Arial, Helvetica, sans-serif; 
+	/*font-weight:bold;*/
 	color:#737373;   
 }
 
